// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin with jsx 1`] = `
"import { Fragment } from 'vue';
import {createVNode, isVNode} from 'vue';
const slice = Array.prototype.slice;
export function jsx(tag, props = null, children = null) {
  if (arguments.length > 3 || isVNode(children)) {
    children = slice.call(arguments, 2);
  }
  return createVNode(tag, props, children);
}

import {defineComponent} from \\"vue\\";
export default defineComponent({
  name: \\"JsxContent\\",
  setup() {
    return () => /* @__PURE__ */ jsx(Fragment, null, /* @__PURE__ */ jsx(\\"h1\\", null, \\"JsxContent\\"));
  }
});"
`;

exports[`plugin with tsx 1`] = `
"import { Fragment } from 'vue';
import {createVNode, isVNode} from 'vue';
const slice = Array.prototype.slice;
export function jsx(tag, props = null, children = null) {
  if (arguments.length > 3 || isVNode(children)) {
    children = slice.call(arguments, 2);
  }
  return createVNode(tag, props, children);
}

import {defineComponent} from \\"vue\\";
export default defineComponent({
  name: \\"TsxContent\\",
  setup() {
    const name = \\"TsxContent\\";
    return () => /* @__PURE__ */ jsx(Fragment, null, /* @__PURE__ */ jsx(\\"h1\\", null, \\"TsxContent\\"));
  }
});"
`;
